# Grid_Drone

./: CMakeLists.txt  README.md  drone.py  package.xml
launch/: drone.launch  fly.launch
models/grid_gate/: model.config  model.sdf
models/grid_gate/meshes/: base_link.STL  frame.STL
src/: depth_map.py  depth_map_2.py  draw.py  drone.py  pose_action.py  position.csv  test.py  test2.py
world/: drone.world
