<?xml version="1.0"?>
<package format="2">
  <name>drone</name>
  <version>0.0.0</version>
  <description>The drone package</description>
  <maintainer email="lucifer@todo.todo">lucifer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
